--- a/src/OrderItems.css
+++ b/src/OrderItems.css
@@ -14,7 +14,10 @@
 }
 
 .item__title {
-  font-weight: bold;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
   text-overflow: ellipsis;
 }
 
@@ -27,6 +30,7 @@
 }
 
 .img__div > img {
+  border: 1px solid lightgrey;
   object-fit: contain;
   height: 180px;
   margin-right: 15px;
