--- a/src/SellerPanel.css
+++ b/src/SellerPanel.css
@@ -21,9 +21,30 @@
   font-size: 1.8rem;
 }
 
+.sp_section_title {
+  opacity: 0;
+  transform: translateX(-100%);
+  animation: slideInFromLeft 0.5s ease-out forwards;
+}
+
+@keyframes slideInFromLeft {
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
 .sp_action_buttons {
   display: flex;
   gap: 1rem;
+}
+
+.sp_section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 2px solid black;
+  margin-bottom: 10px;
 }
 
 .sp_add_button,
@@ -40,6 +61,23 @@
   border-radius: 8px;
   font-weight: 500;
   transition: all 0.3s ease;
+}
+
+.sp_filter_Button {
+  outline: none;
+  background-color: transparent;
+  border: none;
+  border-bottom: 1.5px solid black;
+  border-radius: 0px;
+  width: 120px;
+  padding: 0;
+  font-size: medium;
+  font-weight: 600;
+  color: #515151;
+}
+
+.sp_filter_Button:hover {
+  color: #2c2c2c;
 }
 
 .sp_add_button,
