--- a/src/Header.css
+++ b/src/Header.css
@@ -12,7 +12,12 @@
   margin-right: auto;
   justify-content: space-between;
 }
-
+.heading_seller {
+  font-family: "Roboto Condensed", sans-serif;
+  color: white;
+  margin-left: 50px;
+  letter-spacing: 2px;
+}
 .header__logo {
   max-width: 150px;
   max-height: 120px;
@@ -158,6 +163,7 @@
 .header__nav {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
 }
 
 .header__option {
@@ -167,6 +173,7 @@
   margin-right: 10px;
   color: white;
   padding: 5px;
+  cursor: pointer;
 }
 .header__option:hover {
   border: 0.5px solid rgb(197, 194, 194);
@@ -179,8 +186,28 @@
 .header__optionLineOne {
   font-size: 10px;
   color: rgb(199, 197, 197);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100px;
 }
-
+.Header_add_button {
+  margin: 0;
+  width: 100px;
+  background-color: transparent;
+  color: white;
+  font-weight: 500;
+  border: 1px solid #ffffff66;
+  padding: 8px 0px;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  margin-right: 20px;
+}
+.Header_add_button:hover {
+  background-color: #ffffff22;
+  border-color: #ffffff99;
+}
 .header__optionBasket {
   display: flex;
   align-items: center;
