--- a/src/Login.css
+++ b/src/Login.css
@@ -46,6 +46,9 @@
   border: 1px solid lightgray;
   align-items: center;
 }
+.login__container > form {
+  width: 100%;
+}
 
 .login__container > h1 {
   font-weight: 500;
@@ -84,8 +87,40 @@
 
 .login__register {
   position: relative;
-  width: 95%;
+  width: 100%;
   height: 30px;
   border: 1px solid darkgray;
-  margin-top: 35px;
+  margin-top: 25px;
+  margin-left: 0px;
+}
+
+.checkbox_div {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-top: -15px;
+  margin-bottom: 20px;
+}
+
+.txt_check {
+  font-weight: 600;
+  font-size: 10px;
+  margin-right: 10px;
+}
+
+.avail_check {
+  font-weight: 600;
+  font-size: 10px;
+  margin-right: 10px;
+  margin-top: -15px;
+  margin-bottom: 10px;
+}
+
+.green {
+  color: rgb(37, 141, 11);
+}
+
+.red {
+  color: #f44336;
 }
