--- a/src/AddProduct.css
+++ b/src/AddProduct.css
@@ -1,9 +1,15 @@
 .addProduct_container {
   width: 100vw;
-  height: 80vh;
+  height: 100vh;
+  min-height: fit-content;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.813),
+    rgba(6, 11, 82, 0.865)
+  );
 }
 
 .main_heading {
@@ -18,33 +24,53 @@
 }
 
 .form_container {
-  width: 90%;
-  display: flex;
-}
-
-.img {
-  width: 50%;
-  height: 100%;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+.img {
+  width: 30%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #eeb868;
+  margin-right: 20px;
+}
+
 .img > img {
-  width: 60%;
-  height: 70%;
+  width: 70%;
+  height: 60%;
+  border-radius: 15px;
+  transition: transform 0.5s ease-in;
+}
+
+.img > img:hover {
+  transform: scale(1.2);
+  margin-bottom: 10px;
 }
 
 .form {
-  border: 1px solid lightslategray;
-  padding: 20px;
+  border: 1.5px solid rgb(13, 14, 94);
+  padding: 10px;
   border-radius: 10px;
-  width: 40%;
-  background-color: white;
+  width: 30%;
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-evenly;
+  color: white;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 .pair_input {
+  width: 100%;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .file {
@@ -55,23 +81,44 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-right: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+  width: 100%;
 }
 
 .heading {
   font-size: medium;
   font-weight: 600;
   margin-bottom: 3px;
+  color: #ffffff;
 }
 
 .inp > input {
   height: 20px;
   padding: 5px 10px;
   border-radius: 5px;
-  border: 1px solid lightgray;
+  /* border: 1px solid lightgray; */
+  border: none;
   font-size: medium;
-  background-color: #eae8e8;
+  background-color: #56545e59;
+  width: 70%;
+  color: white;
+}
+
+.inp input[type="date"] {
+  color: white;
+}
+
+.inp input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(1); /* optional: make the calendar icon white */
+}
+input::placeholder {
+  font-family: "Roboto Condensed", sans-serif;
+  color: white;
+}
+
+textarea::placeholder {
+  font-family: "Roboto Condensed", sans-serif;
+  color: white;
 }
 
 .narrow {
@@ -79,26 +126,52 @@
 }
 
 input:focus {
-  border: 2px solid #e7a600;
+  border: 2px solid #3e5ba9;
   outline: none;
 }
 
 .addproduct_btn {
   position: relative;
+  margin: 5px 0px 0px 10px;
+  width: 100px;
 }
 
 .Description {
-  width: 80%;
+  width: 90%;
   resize: none;
   padding: 5px 10px;
   font-size: large;
-  background-color: #eae8e8;
-  border: 1px solid lightgray;
+  background-color: #56545e59;
   border-radius: 5px;
+  border: none;
+  color: white;
+  scrollbar-width: thin; /* for Firefox */
+  scrollbar-color: black transparent; /* for Firefox */
+  overflow: auto; /* ensure scroll works */
+}
+
+/* Chrome, Edge, Safari - Scrollbar customization */
+.Description::-webkit-scrollbar {
+  width: 3px;
+}
+
+.Description::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.Description::-webkit-scrollbar-thumb {
+  background-color: black;
+  border-radius: 10px;
+  border: none;
+}
+
+/* 💡 This is what removes that white box */
+.Description::-webkit-scrollbar-corner {
+  background: transparent;
 }
 
 .Description:focus {
-  border: 2px solid #e7a600;
+  border: 2px solid #3e5ba9;
   outline: none;
 }
 
@@ -110,7 +183,7 @@ input:focus {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-right: 20px;
+  margin-right: 10px;
   width: 90px;
 }
 
@@ -166,10 +239,83 @@ input:focus {
 }
 
 .label-text {
-  color: #333;
+  color: white;
   transition: color 0.3s ease;
 }
 
 .custom-checkbox input:checked ~ .label-text {
   color: #4caf50;
+}
+
+.cropper-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.cropper {
+  position: relative;
+  width: 90%;
+  height: 400px;
+  background: white;
+}
+
+.cropper-controls {
+  margin-top: 20px;
+}
+
+@media (max-width: 842px) {
+  .form_container {
+    justify-content: space-evenly;
+  }
+  .form {
+    flex: 0.5;
+  }
+  .img {
+    flex: 0.4;
+  }
+}
+
+@media (max-width: 550px) {
+  .addProduct_container {
+    border: 1px solid wheat;
+    height: fit-content;
+  }
+
+  .form_container {
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+  .form {
+    width: 80%;
+    margin-top: 10px;
+  }
+  .form {
+    flex: 0.5;
+  }
+  .img {
+    flex: 0.5;
+  }
+  .img > img {
+    width: 100%;
+  }
+}
+
+.uploadbtn {
+  background-color: #56545e59;
+  color: white;
+  border: 1px solid #183b99;
+}
+
+.uploadbtn:hover {
+  border: 1px solid #2047b4;
 }
