--- a/src/DispProd.css
+++ b/src/DispProd.css
@@ -1,6 +1,7 @@
 .prod__page__container {
-  min-height: 89vh;
-  width: 100%;
+  height: 100vh;
+  min-height: fit-content;
+  width: 98.7vw;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,25 +13,33 @@
 .image_container {
   border: 2px solid #e0e0e0;
   border-radius: 12px;
-  width: 45%; /* Increased width */
-  max-width: 450px; /* Slightly bigger image */
+  width: 20%; /* Increased width */
+  height: 50%;
   padding: 20px; /* More padding for better centering */
   display: flex;
   justify-content: center;
   align-items: center;
   background: white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: all 0.4s ease-in;
 }
 
-.img {
+.image_container:hover {
+  transform: scale(1.1);
+}
+
+.image_container > img {
   width: 100%;
-  height: auto;
+  height: 100%;
   border-radius: 8px;
+  padding: 0;
+  margin: 0;
+  border: 1px solid black;
 }
 
 .detail__container {
   padding: 25px;
-  width: 40%;
+  width: 50%;
   max-width: 400px;
   background: white;
   border: 1px solid #e0e0e0;
@@ -66,7 +75,7 @@
 .value {
   font-size: 1.5rem;
   font-weight: bold;
-  color: #d9534f;
+  color: #171717;
 }
 
 .category {
@@ -80,8 +89,8 @@
   align-items: center;
   gap: 5px;
   font-size: 1.2rem;
-  color: #ffba00;
-  margin-bottom: 10px;
+  color: #000000;
+  margin-top: 20px;
 }
 
 /* Adjusted Buttons */
@@ -109,7 +118,6 @@
   justify-content: space-between;
   align-items: center;
   gap: 10px;
-  margin-top: 20px;
 }
 
 /* Responsive Design */
@@ -138,7 +146,7 @@
 @media screen and (max-width: 600px) {
   .image_container,
   .detail__container {
-    width: 100%;
+    width: 90%;
   }
 
   .name {
