--- a/src/AddProduct.css
+++ b/src/AddProduct.css
@@ -1,15 +1,11 @@
 .addProduct_container {
-  width: 100vw;
+  width: 98.5vw;
   height: 100vh;
   min-height: fit-content;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 0.813),
-    rgba(6, 11, 82, 0.865)
-  );
+  background: white;
 }
 
 .main_heading {
@@ -24,20 +20,22 @@
 }
 
 .form_container {
-  width: 100%;
+  width: 60%;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 20px;
+  border-radius: 10px;
+  border: 1.5px solid #1a2432;
 }
 
 .img {
-  width: 30%;
+  width: 40%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid #eeb868;
-  margin-right: 20px;
+  border-right: 1px solid #1a2432;
 }
 
 .img > img {
@@ -45,6 +43,7 @@
   height: 60%;
   border-radius: 15px;
   transition: transform 0.5s ease-in;
+  border: 1px solid black;
 }
 
 .img > img:hover {
@@ -52,11 +51,15 @@
   margin-bottom: 10px;
 }
 
+.form-heading {
+  color: #1a2432;
+  font-weight: 700;
+  font-size: 2rem;
+}
+
 .form {
-  border: 1.5px solid rgb(13, 14, 94);
   padding: 10px;
-  border-radius: 10px;
-  width: 30%;
+  width: 55%;
   background-color: transparent;
   display: flex;
   flex-direction: column;
@@ -89,36 +92,35 @@
   font-size: medium;
   font-weight: 600;
   margin-bottom: 3px;
-  color: #ffffff;
+  color: #1a2432;
 }
 
 .inp > input {
   height: 20px;
   padding: 5px 10px;
-  border-radius: 5px;
-  /* border: 1px solid lightgray; */
-  border: none;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  border: 0px;
+  border-bottom: 3px solid #1a2432;
   font-size: medium;
-  background-color: #56545e59;
+  background-color: rgb(230, 228, 228);
   width: 70%;
-  color: white;
+  color: black;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 .inp input[type="date"] {
-  color: white;
+  color: rgb(74, 73, 73);
 }
 
-.inp input[type="date"]::-webkit-calendar-picker-indicator {
-  filter: invert(1); /* optional: make the calendar icon white */
-}
 input::placeholder {
   font-family: "Roboto Condensed", sans-serif;
-  color: white;
+  color: rgb(74, 73, 73);
 }
 
 textarea::placeholder {
   font-family: "Roboto Condensed", sans-serif;
-  color: white;
+  color: rgb(74, 73, 73);
 }
 
 .narrow {
@@ -126,14 +128,28 @@ textarea::placeholder {
 }
 
 input:focus {
-  border: 2px solid #3e5ba9;
+  border: 3px solid #1a2432;
   outline: none;
 }
 
 .addproduct_btn {
   position: relative;
   margin: 5px 0px 0px 10px;
-  width: 100px;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 600;
+  background-color: #1a2432;
+  color: white;
+  border: 0;
+  font-size: 1rem;
+  width: 150px;
+  transition: all 400ms ease-in;
+  cursor: pointer;
+}
+
+.addproduct_btn:hover {
+  color: #1a2432;
+  background-color: white;
+  border: 1px solid #1a2432;
 }
 
 .Description {
@@ -141,13 +157,16 @@ input:focus {
   resize: none;
   padding: 5px 10px;
   font-size: large;
-  background-color: #56545e59;
-  border-radius: 5px;
-  border: none;
-  color: white;
+  background-color: rgb(230, 228, 228);
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  border: 0px;
+  border-bottom: 3px solid #1a2432;
+  color: rgb(0, 0, 0);
   scrollbar-width: thin; /* for Firefox */
   scrollbar-color: black transparent; /* for Firefox */
   overflow: auto; /* ensure scroll works */
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 /* Chrome, Edge, Safari - Scrollbar customization */
@@ -171,7 +190,7 @@ input:focus {
 }
 
 .Description:focus {
-  border: 2px solid #3e5ba9;
+  border: 3px solid #1a2432;
   outline: none;
 }
 
@@ -239,7 +258,7 @@ input:focus {
 }
 
 .label-text {
-  color: white;
+  color: rgb(0, 0, 0);
   transition: color 0.3s ease;
 }
 
@@ -280,11 +299,11 @@ input:focus {
     flex: 0.5;
   }
   .img {
-    flex: 0.4;
+    flex: 0.5;
   }
 }
 
-@media (max-width: 550px) {
+@media (max-width: 700px) {
   .addProduct_container {
     border: 1px solid wheat;
     height: fit-content;
@@ -304,6 +323,7 @@ input:focus {
   }
   .img {
     flex: 0.5;
+    border: none;
   }
   .img > img {
     width: 100%;
