--- a/src/Header.css
+++ b/src/Header.css
@@ -1,8 +1,8 @@
 .header {
-  height: 60px;
+  height: 70px;
   display: flex;
   align-items: center;
-  background-color: #131921;
+  background-color: #f4f4f4;
   position: sticky;
   top: 0;
   z-index: 100;
@@ -11,6 +11,8 @@
   margin-left: auto;
   margin-right: auto;
   justify-content: space-between;
+  border-bottom: 1px solid gray;
+  box-shadow: 0 7px 4px rgba(0, 0, 0, 0.05);
 }
 .heading_seller {
   font-family: "Roboto Condensed", sans-serif;
@@ -19,11 +21,18 @@
   letter-spacing: 2px;
 }
 .header__logo {
-  max-width: 150px;
-  max-height: 120px;
-  object-fit: cover;
+  max-width: 140px;
+  max-height: 80px;
+  object-fit: contain;
+  overflow: hidden;
   margin: 0 20px;
-  margin-top: 5px;
+  margin-top: 0px;
+}
+
+.header_btns_div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .header__logo:hover {
@@ -68,21 +77,26 @@
 .header__searchInput {
   height: 20px;
   padding: 10px;
-  border: none;
+  border: 1px solid black;
   outline: none;
   width: 100%;
-  border-top-left-radius: 15px;
-  border-bottom-left-radius: 15px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  color: black;
+}
+
+.header__searchInput::placeholder {
+  color: gray;
 }
 
 .header__searchIcon {
-  padding: 5px 8px;
+  padding: 6px 18px;
   height: 30px !important;
-  background-color: #edb88b;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
+  background-color: #031130;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
   /* box-shadow: 15px -5px 15px 0px rgba(0, 0, 139, 0.7); */
-  color: rgb(6, 6, 6);
+  color: rgb(253, 253, 253);
 }
 
 .button-menu {
@@ -122,7 +136,7 @@
 .list {
   text-decoration: none;
   list-style: none;
-  z-index: 999;
+  z-index: -1;
   inset: 0;
   color: rgb(220, 218, 218);
   background-color: #0e1318b1;
@@ -144,6 +158,7 @@
 }
 
 .list.styled {
+  z-index: 999;
   height: fit-content;
   transform: translateY(0);
   opacity: 10;
@@ -171,12 +186,12 @@
   flex-direction: column;
   margin-left: 10px;
   margin-right: 10px;
-  color: white;
+  color: black;
   padding: 5px;
   cursor: pointer;
 }
 .header__option:hover {
-  border: 0.5px solid rgb(197, 194, 194);
+  border: 0.5px solid rgb(41, 41, 41);
 }
 
 .header__link {
@@ -185,7 +200,7 @@
 
 .header__optionLineOne {
   font-size: 10px;
-  color: rgb(199, 197, 197);
+  color: rgb(0, 0, 0);
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -195,9 +210,9 @@
   margin: 0;
   width: 100px;
   background-color: transparent;
-  color: white;
+  color: rgb(23, 23, 23);
   font-weight: 500;
-  border: 1px solid #ffffff66;
+  border: 1px solid #00000066;
   padding: 8px 0px;
   border-radius: 8px;
   cursor: pointer;
@@ -206,12 +221,12 @@
 }
 .Header_add_button:hover {
   background-color: #ffffff22;
-  border-color: #ffffff99;
+  border-color: #5d5c5c99;
 }
 .header__optionBasket {
   display: flex;
   align-items: center;
-  color: white;
+  color: black;
   max-width: 100%;
 }
 
